--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,5 +23,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'F1541'
 - !lcsh 'Costa Rica -- Description and travel'
+- GITenberg
 title: "Een Reisje door de Republiek Costa-Rica\r\nDe Aarde en haar Volken, 1907"
 url: http://www.gutenberg.org/ebooks/19835
